--- a/4T$CTF/1. The Pilote.md
+++ b/4T$CTF/1. The Pilote.md
@@ -1,5 +1,4 @@
 
-
 # Description
 
 ```
@@ -19,19 +18,19 @@ The flag follows the format: 4T${<hex_key>}. The flag for this challenge will be
 
 # Write-Up
 
-When we look at the pcapng, we can see thousands of packets `URB_ISOCHRONOUS_IN` and `URB_ISOCHRONOUS_OUT` like the following
+When we look at the pcapng, we can see thousands of packets `URB_ISOCHRONOUS_IN` and `URB_ISOCHRONOUS_OUT` like the following ones
 ![](../attachments/Pasted%20image%2020241111104141.png)
 
-We you are using an USB keyboard, this is the data sent by the keyboard.
-Keyboard do not send letters but something called `keystrokes` which is basically an hex number that can be converted to the corresponding letter (depending on the keyboard layout).
+When you are using an USB keyboard, this is the data sent by the keyboard.
+Keyboard don't send letters but something called `keystrokes` which is basically an hex number that can be converted to the corresponding letter (depending on the keyboard layout).
 
-Using Hacktricks and `Hall-Effect` challenge from BuckeyCTF, I filtered the KeyStrokes in Wireshark
+Using Hacktricks and `Hall-Effect` challenge from BuckeyeCTF, I filtered the keystrokes in Wireshark
 - https://book.hacktricks.xyz/generic-methodologies-and-resources/basic-forensic-methodology/pcap-inspection/usb-keystrokes
 - https://ctftime.org/writeup/39503
 
 ```sql
 usb.transfer_type == 0x01 -- Filter USB keystrokes 
-frame.len == 35           -- Filter USB Keystrokes to "host"
+frame.len == 35           -- Filter USB Keystrokes from 2.5.1 to "host"
 usb.transfer_type == 0x01 && frame.len == 35 -- final filter
 ```
 
@@ -50,7 +49,7 @@ Extract keystrokes only
 cat keystrokes.csv | cut -d "\"" -f 16 > hexdata.hex
 ```
 
-Based on that, I made a Python script to convert Keystrokes to the corresponding chars
+Based on that, I made a Python script to convert Keystrokes to the corresponding chars (expecting a QWERTY keyboard layout)
 ```python
 KEY_CODES = {
     0x04: ["a", "A"],
