--- a/4T$CTF/2. The Website.md
+++ b/4T$CTF/2. The Website.md
@@ -14,29 +14,32 @@ The flag follows the format: 4T${<hex_key>}. The flag for this challenge will be
 
 
 Website : https://hackcorp.net/a22b4g8974
-Credentials : owen.perkins    qB7BeivnTM9zMQcpFJAdpsuVoJJkny2
+Credentials : `owen.perkins` :`qB7BeivnTM9zMQcpFJAdpsuVoJJkny2`
 
+# Write Up
 
-The app contains 5 endpoints but only 3 are relevant for this step of the serie
+The app contains 5 endpoints but only 3 are relevant for this step of `fil-rouge`
 - Communications
 - Access Terminal
-- View Personnal Notes
+- View Personal Notes
+
 ![](../attachments/Pasted%20image%2020241111110859.png)
 
-**Communication**
+**Communications**
 ![](../attachments/Pasted%20image%2020241111110933.png)
 This page contains 4 PGP encrypted messages
 
 
-**Personnal notes**
+**View Personal Notes**
 ![](../attachments/Pasted%20image%2020241111111044.png)
-`Communication is the key` is an hint to tell us to find a way to decrypt the communication
+`Communication is the key` is an hint to tell us to find a way to decrypt the communication.
+`Change password of gpg key` is an hint to tell us `owen.perkins` reuses his passwords
+
 
 **Access terminal**
-
 ![](../attachments/Pasted%20image%2020241111111257.png)
 
-We are provided with a very cool terminal that enables us to run commands sur as `cd`, `ls` and `cat`
+We are provided with a very cool terminal that enables us to run commands such as `cd`, `ls` and `cat`
 
 The first thing that popped to my eyes is the `.gnupg` folder which contains GPG privates keys
 
@@ -45,7 +48,6 @@ The first thing that popped to my eyes is the `.gnupg` folder which contains GPG
 ![](../attachments/Pasted%20image%2020241111111548.png)
 
 To make things easier, I made a script to extract files and extracted all files in `.gnupg`
-
 ```python
 import requests
 import base64
@@ -90,7 +92,7 @@ while True :
         os.chdir(cmd.split(" ")[1])
 ```
 
-I copied the `.gnupg` folder to `~/.gnupg` and I extracted all messages from the `Communication` channel and wrote them to `message1-4.gpg`
+I copied the `.gnupg` folder to `~/.gnupg` and I extracted all messages from the `Communications` channel and wrote them to `message1-4`
 
 ```bash
 gpg --decrypt message1 # A password is asked, I just enter the only password i knew and BOOM
@@ -99,11 +101,10 @@ gpg --decrypt message3
 gpg --decrypt message4
 ```
 
-*Note that message 1 and 2 do not contain relevant information and message 4 is only relevant for step 4,5 and 6*
+*Note that message 1 and 2 do not contain relevant infos and message 4 is only relevant for step 4,5 and 6*
 
 **Message 3**
 ```
-gpg: WARNING: unsafe permissions on homedir '/home/kali/.gnupg'
 gpg: encrypted with 4096-bit RSA key, ID 7609D328E170A7B3, created 2024-11-02
       "Owen Perkins <owen.perkins@hackcorp.net>"
 Hey Owen, this is Loreta.
@@ -120,10 +121,9 @@ PPS: What was that about Wawa, Inc. ? Was it us who did this, I mean, who are we
 ```
 
 **Message 4**
-- Note that this message was not prevent in the first part of the CTF. 
-- It contains an hint for the steps 4,5 and 6 but when I solved step 2, they was now available
+- Note that this message was not present in the first wave of the CTF. 
+- It contains an hint for the steps 4,5 and 6 but when I solved step 2, it was not available
 ```
-gpg: WARNING: unsafe permissions on homedir '/home/kali/.gnupg'
 gpg: encrypted with 4096-bit RSA key, ID 7609D328E170A7B3, created 2024-11-02
       "Owen Perkins <owen.perkins@hackcorp.net>"
 Hey Owen,
@@ -138,11 +138,12 @@ Sincerely yours, Agent X.
 ```
 
 **So, message 3 is the relevant message** 
-- It talks about a file talking about Wawa.
+- It talks about a file dealing about something called `Wawa`.
 
-So, back to our terminal; I extracted all files available and one PDF called was talking about Wawa Incorporation CyberAttack : `USCOURTS-paed-2_19-cv-06019-4.pdf`
+So, back to our terminal,
+I extracted all files available and one PDF called was talking about `Wawa Incorporation CyberAttack` : `USCOURTS-paed-2_19-cv-06019-4.pdf`
 
-A quick google research and I found the original PDF provided by a www.govinfo.gov
+A quick google research and I found the original PDF provided by www.govinfo.gov
 - https://www.govinfo.gov/content/pkg/USCOURTS-paed-2_19-cv-06019/pdf/USCOURTS-paed-2_19-cv-06019-4.pdf
 
 A download it and made a checksum of both files
@@ -153,6 +154,7 @@ A download it and made a checksum of both files
 └─$ md5sum original-USCOURTS-paed-2_19-cv-06019-4.pdf         
 05b27dfe74abcce8b24177be34cdaadf  original-USCOURTS-paed-2_19-cv-06019-4.pdf
 ```
+The file we retrieved from `hackcorp.net` has been modified
 
 ```bash
 └─$ ls -lah *USCOURTS-paed-2_19-cv-06019-4.pdf
@@ -160,7 +162,7 @@ A download it and made a checksum of both files
 -rw-rw-r-- 1 kali kali 259K Nov 11 11:31 original-USCOURTS-paed-2_19-cv-06019-4.pdf
 ```
 
-The PDF that we retrieved from the website is huuuuuge compared to the original one
+The `hackcorp.net` PDF huuuuuger compared to the original one
 
 Running `strings`, I discovered that data where hidden in it
 ```
@@ -179,11 +181,10 @@ Running `strings`, I discovered that data where hidden in it
 
 Extract the data with
 ```bash
-└─$ strings corrupted.pdf | grep '20 98 119' | cut -d "[" -f 2 | cut -d "]" -f 1 > extracted_digits
+strings corrupted.pdf | grep '20 98 119' | cut -d "[" -f 2 | cut -d "]" -f 1 > extracted_digits
 ```
 
-And then use a python script to convert those ints to a real file
-
+And then I used a python script to convert those digits to a real file
 ```python
 with open("extracted_digits") as f :
     content = f.read()
@@ -202,7 +203,7 @@ Now that we have extracted the file, we know that the file has been xored.
 I sent it to : https://wiremask.eu/tools/xor-cracker/
 Which helps me find that the key is `1234` but the extracted file is not valid because of a mishandling of the app I think
 
-But no worry, i made a python script (YES AGAIN !)
+But no worry, I made a python script (YES AGAIN !)
 ```python
 with open("extracted_file","rb") as f :
     content = f.read()
@@ -213,11 +214,10 @@ def simplexor(data, key):
     ))
     
 with open("output.pdf","wb") as f :
-    f.write(simplexor(content,[ord("1"),ord("2"),ord('3'),ord('4')])) # Wor with 1234
+    f.write(simplexor(content,[ord("1"),ord("2"),ord('3'),ord('4')])) # Xor with 1234 key
 ```
 
-Here is the xored file
-
+Here is the unxored file
 ![](../attachments/Pasted%20image%2020241111115132.png)
 
 # Flag
