--- a/4T$CTF/3. The Meeting.md
+++ b/4T$CTF/3. The Meeting.md
@@ -7,15 +7,13 @@ A meeting ? When is it happening, can you get more infos ?
 The flag follows the format: 4T${<hex_key>}. The flag for this challenge will be annotated P3.
 ```
 
-# Provided hints
+# Provided Hints
 
-```
-Everything required is in the poem
-The first verse contains the Date
-The second the time
-The third the location
-The second line of the third paragraph is the key
-```
+- Everything needed is in the poem.
+- The first stanza contains the **date**.
+- The second stanza contains the **time**.
+- The third stanza provides the **location**.
+- The second line of the third stanza is the **key**
 
 # Information from step 2
 
@@ -24,7 +22,7 @@ The second line of the third paragraph is the key
 ![](../attachments/Pasted%20image%2020241111120035.png)
 
 **This is the `/meetings` endpoint of the website**
-
+- We can read that if we find a correct meeting location and time, we'll be able to retrieve the notes `owen.perkins` wrote.
 ![](../attachments/Pasted%20image%2020241111120130.png)
 
 **This is the poem**
@@ -33,24 +31,26 @@ The second line of the third paragraph is the key
 # Write-Up
 
 **Date**
- The date was quite easy to find, the first paragraph talks about 14 and novembre so I guessed that was 14th of november 2024
+ The date was quite easy to find, the first stanza talks about `fourteen` and `novembre` so I guessed that was 14th of november 2024
 
 **Time**
 The poem references the start of the second nautical twilight
 Which sadly can depend on the website you're looking at.. it was around 16:42
 
 **Location**
-The second line of the third paragraph talks about the `third lens` which I understand to be the third camera.
+The second verse of the third stanza talks about the `third lens` which I understood to be the third camera.
 
+**Let's do some Geoint**
 With a reverse image search I found it was exactly here
 ![](../attachments/Pasted%20image%2020241111120345.png)
 
+Found the location
 ![](../attachments/Pasted%20image%2020241111120424.png)
 
 I just had to pick on the `/meeting` with the right date and time and BOOM
 
 ```json
-	{
+{
 	"message":"meeting found",
 	 "messages":[
 		 "Hello, #######. I've been waiting for you.",
@@ -59,7 +59,8 @@ I just had to pick on the `/meeting` with the right date and time and BOOM
 		 "Be sure to come at the right time.",
 		 "See you soon.",
 		 "P3: 4T${fe236be870426b57e398dc8b5587d221}"
-	],"status":"ok"
+	],
+	"status":"ok"
 }
 ```
 
@@ -69,7 +70,7 @@ I just had to pick on the `/meeting` with the right date and time and BOOM
 
 # Next
 
-Informations found in this step was not linked to any other step.
+Information found in this step was not linked to any other step.
 So, in my solve order, the next step was
 - [5. The alert 2](5.%20The%20alert%202.md)
 
