--- a/4T$CTF/5. The alert 2.md
+++ b/4T$CTF/5. The alert 2.md
@@ -34,7 +34,7 @@ So, I took back my script from step 2 and extracted the file.
 
 As every forensic player, I run a `string` against that memory dump
 ```
-└─$ strings /shared_kali/file.dmp| grep '4T\${'
+└─$ strings dump | grep '4T\${'
 	flag := "4T${09239d77fff8b6cad3f63ed88cd7b855}"
 ```
 
