--- a/4T$CTF/6. The website 2.md
+++ b/4T$CTF/6. The website 2.md
@@ -7,7 +7,7 @@ Another one ? What could this be about ? Please break into it !
 Intelligent bruteforcing (your own script) is recommended. The flag follows the format: 4T${<hex_key>}. The flag for this challenge will be annotated P6.
 ```
 
-# Provided files
+# Provided file
 
 `login.go`
 ```go
@@ -46,18 +46,17 @@ func Login(s *Server) func(c echo.Context) error {
 
 # Information from step 5
 
-`dump` file containing a memory dump
-
+- `dump` file contains a memory dump
 
 # Write Up
 
-Back to my beloved `string` command I ran
+Back to my beloved `string` command, I ran
 
 ```bash
 strings dump | grep 'hackcorp.net'
 ```
 
-And it prompted me with some new hackcorp.net subdomains, especially
+And it prompted me with some new `hackcorp.net` subdomains, especially
 - https://admin1-aez.hackcorp.net
 
 ![](../attachments/Pasted%20image%2020241111122046.png)
@@ -67,6 +66,7 @@ Reading the small lines, I saw that
 - The API may not work correctly
 - We can log in using `/USERNAME/PASSWORD`
 
+`db.sqlite`
 ```bash
 sqlite3 db.sqlite
 ```
@@ -75,6 +75,7 @@ sqlite3 db.sqlite
 sqlite> select sql from sqlite_master;
 CREATE TABLE users (id integer not null primary key, login text, is_admin boolean, password text)
 ```
+
 *Based on that we can see the database structure and extract some credentials (they were not working)*
 ```sql
 sqlite> select * from users;
@@ -84,7 +85,7 @@ sqlite> select * from users;
 ```
 
 As we are provided with the `login.go` source code, we can see that the login form is vulnerable to a Blind Time Based SQL Injection. 
-So I captured a request in BurpSuite and run sqlmap as a barbarian.
+So I captured a request in BurpSuite and run sqlmap as an haxor monkey.
 
 `req.txt`
 ```
