--- a/4T$CTF/7. Final.md
+++ b/4T$CTF/7. Final.md
@@ -147,18 +147,20 @@ print(chunks)
 
 Knowing the order of number
 
-|      Element      | Definition              |
-| :---------------: | ----------------------- |
-|      version      |                         |
-|         N         | p\*q                    |
-|         e         | often `0x10001`         |
-|         d         | e<sup>-1</sup> % phi(n) |
-|         p         |                         |
-|         q         |                         |
-|        d_p        | d % (p-1)               |
-|        d_q        | d % (q-1)               |
-|       q_inv       | q<sup>-1</sup> % p      |
-| other prime infos | optional                |
+```
+RSAPrivateKey ::= SEQUENCE {
+	version           Version,
+	modulus           INTEGER,  -- n
+	publicExponent    INTEGER,  -- e
+	privateExponent   INTEGER,  -- d
+	prime1            INTEGER,  -- p
+	prime2            INTEGER,  -- q
+	exponent1         INTEGER,  -- d mod (p-1)
+	exponent2         INTEGER,  -- d mod (q-1)
+	coefficient       INTEGER,  -- (inverse of q) mod p
+	otherPrimeInfos   OtherPrimeInfos OPTIONAL
+}
+```
 
 We can easily find `p`,`q` and `e` from the output
 ```python
