--- a/4T$CTF/fil-rouge/1. The Pilote.md
+++ b/4T$CTF/fil-rouge/1. The Pilote.md
@@ -14,12 +14,12 @@ The flag follows the format: 4T${<hex_key>}. The flag for this challenge will be
 # Provided content
 
 `keylogger.pcap`
-![](../attachments/Pasted%20image%2020241111104030.png)
+![](../../attachments/Pasted%20image%2020241111104030.png)
 
 # Write-Up
 
 When we look at the pcapng, we can see thousands of packets `URB_ISOCHRONOUS_IN` and `URB_ISOCHRONOUS_OUT` like the following ones
-![](../attachments/Pasted%20image%2020241111104141.png)
+![](../../attachments/Pasted%20image%2020241111104141.png)
 
 When you are using an USB keyboard, this is the data sent by the keyboard.
 Keyboard don't send letters but something called `keystrokes` which is basically an hex number that can be converted to the corresponding letter (depending on the keyboard layout).
@@ -40,7 +40,7 @@ I then added HID Data has a column because it make it easier to extract key stro
 - Select `Apply as a column`
 
 I am now with something like that that I can extract
-![](../attachments/Pasted%20image%2020241111105556.png)
+![](../../attachments/Pasted%20image%2020241111105556.png)
 
 - File -> Export Packet dissection -> Export as CSV
 
@@ -157,11 +157,11 @@ owen.perkins    qB7BeivnTM9zMQcpFJAdpsuVoJJkny2
 
 Going to https://hackcorp.net/a22b4g8974 
 
-![](../attachments/Pasted%20image%2020241111110515.png)
+![](../../attachments/Pasted%20image%2020241111110515.png)
 
 Login with `owen.perkins`:`qB7BeivnTM9zMQcpFJAdpsuVoJJkny2`
 
-![](../attachments/Pasted%20image%2020241111110454.png)
+![](../../attachments/Pasted%20image%2020241111110454.png)
 
 
 # Flag
