--- a/4T$CTF/fil-rouge/2. The Website.md
+++ b/4T$CTF/fil-rouge/2. The Website.md
@@ -23,29 +23,32 @@ The app contains 5 endpoints but only 3 are relevant for this step of `fil-rouge
 - Access Terminal
 - View Personal Notes
 
-![](../attachments/Pasted%20image%2020241111110859.png)
+![](../../attachments/Pasted%20image%2020241111110859.png)
 
 **Communications**
-![](../attachments/Pasted%20image%2020241111110933.png)
+
+![](../../attachments/Pasted%20image%2020241111110933.png)
 This page contains 4 PGP encrypted messages
 
 
 **View Personal Notes**
-![](../attachments/Pasted%20image%2020241111111044.png)
-`Communication is the key` is an hint to tell us to find a way to decrypt the communication.
-`Change password of gpg key` is an hint to tell us `owen.perkins` reuses his passwords
+
+![](../../attachments/Pasted%20image%2020241111111044.png)
+
+- `Communication is the key` is an hint to tell us to find a way to decrypt the communication.
+- `Change password of gpg key` is an hint to tell us `owen.perkins` reuses his passwords
 
 
 **Access terminal**
-![](../attachments/Pasted%20image%2020241111111257.png)
+![](../../attachments/Pasted%20image%2020241111111257.png)
 
 We are provided with a very cool terminal that enables us to run commands such as `cd`, `ls` and `cat`
 
 The first thing that popped to my eyes is the `.gnupg` folder which contains GPG privates keys
 
-![](../attachments/Pasted%20image%2020241111111519.png)
+![](../../attachments/Pasted%20image%2020241111111519.png)
 
-![](../attachments/Pasted%20image%2020241111111548.png)
+![](../../attachments/Pasted%20image%2020241111111548.png)
 
 To make things easier, I made a script to extract files and extracted all files in `.gnupg`
 ```python
@@ -218,7 +221,8 @@ with open("output.pdf","wb") as f :
 ```
 
 Here is the unxored file
-![](../attachments/Pasted%20image%2020241111115132.png)
+
+![](../../attachments/Pasted%20image%2020241111115132.png)
 
 # Flag
 
