--- a/4T$CTF/fil-rouge/3. The Meeting.md
+++ b/4T$CTF/fil-rouge/3. The Meeting.md
@@ -19,14 +19,16 @@ The flag follows the format: 4T${<hex_key>}. The flag for this challenge will be
 
 
 **This is the `/surveillance` endpoint of the website**
-![](../attachments/Pasted%20image%2020241111120035.png)
+![](../../attachments/Pasted%20image%2020241111120035.png)
 
 **This is the `/meetings` endpoint of the website**
 - We can read that if we find a correct meeting location and time, we'll be able to retrieve the notes `owen.perkins` wrote.
-![](../attachments/Pasted%20image%2020241111120130.png)
+
+![](../../attachments/Pasted%20image%2020241111120130.png)
 
 **This is the poem**
-![](../attachments/Pasted%20image%2020241111115132.png)
+
+![](../../attachments/Pasted%20image%2020241111115132.png)
 
 # Write-Up
 
@@ -42,10 +44,11 @@ The second verse of the third stanza talks about the `third lens` which I unders
 
 **Let's do some Geoint**
 With a reverse image search I found it was exactly here
-![](../attachments/Pasted%20image%2020241111120345.png)
+![](../../attachments/Pasted%20image%2020241111120345.png)
 
 Found the location
-![](../attachments/Pasted%20image%2020241111120424.png)
+
+![](../../attachments/Pasted%20image%2020241111120424.png)
 
 I just had to pick on the `/meeting` with the right date and time and BOOM
 
