--- a/4T$CTF/fil-rouge/4. The Alert.md
+++ b/4T$CTF/fil-rouge/4. The Alert.md
@@ -41,7 +41,7 @@ Flag is in his private notes
 
 I had to get back to https://hackcorp.net/a22b4g8974 and log in as `agent.x` with credz from step 6
 
-![](../attachments/Pasted%20image%2020241111123838.png)
+![](../../attachments/Pasted%20image%2020241111123838.png)
 
 # Flag 
 
