--- a/4T$CTF/fil-rouge/5. The alert 2.md
+++ b/4T$CTF/fil-rouge/5. The alert 2.md
@@ -28,7 +28,7 @@ Sincerely yours, Agent X.
 Based on the message above message, and the fact that step 5 came from the second wave, I went back to the terminal and I found a `dump` file that wasn't here before the second wave was uploaded.
 
 
-![](../attachments/Pasted%20image%2020241111121251.png)
+![](../../attachments/Pasted%20image%2020241111121251.png)
 
 So, I took back my script from step 2 and extracted the file.
 
