--- a/4T$CTF/fil-rouge/6. The website 2.md
+++ b/4T$CTF/fil-rouge/6. The website 2.md
@@ -59,7 +59,7 @@ strings dump | grep 'hackcorp.net'
 And it prompted me with some new `hackcorp.net` subdomains, especially
 - https://admin1-aez.hackcorp.net
 
-![](../attachments/Pasted%20image%2020241111122046.png)
+![](../../attachments/Pasted%20image%2020241111122046.png)
 
 Reading the small lines, I saw that 
 - `/db.sqlite` contained a previous database leakage which I downloaded.
@@ -134,7 +134,7 @@ After some time, the database was dumped
 Logging in with `theadmin000` worked
 - https://admin1-aez.hackcorp.net/theadmin0000/e5kVZVjn6XVzYi122RdEF4Jsx1mPEKnL
 
-![](../attachments/Pasted%20image%2020241111123137.png)
+![](../../attachments/Pasted%20image%2020241111123137.png)
 
 # Flag
 
