Correct a bug when converting digits to byte

--- a/4T$CTF/fil-rouge/2. The Website.md
+++ b/4T$CTF/fil-rouge/2. The Website.md
@@ -195,11 +195,9 @@ with open("extracted_digits") as f :
 
 with open("extracted_file","wb") as f :
     for digit in digits :
-        try :
-            byte = bytes.fromhex(hex(int(digit))[2:])
-            f.write(byte)
-        except :
-            pass # probably an empty string
+        if digit.strip() != "": 
+            value = int(digit).to_bytes(1) # Digits are 0 <= x <= 255
+            f.write(value)
 ```
 
 Now that we have extracted the file, we know that the file has been xored.
